--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
     aop:
       proxy-target-class: true
     datasource:
-        jdbc-url: jdbc:mysql://localhost:3306/yunfuwu?useUnicode=true&characterEncoding=utf8
+        jdbc-url: jdbc:mysql://localhost:3306/yunfuwu?useUnicode=true&characterEncoding=utf8&autoReconnect=true&useSSL=false
         username: root
         password: root
         driver-class-name: com.mysql.jdbc.Driver
@@ -67,7 +67,7 @@ spring:
   aop:
     proxy-target-class: true
   datasource:
-      url: jdbc:mysql://localhost:3306/yunfuwu?useUnicode=true&characterEncoding=utf8
+      url: jdbc:mysql://localhost:3306/yunfuwu?useUnicode=true&characterEncoding=utf8&autoReconnect=true&useSSL=false
       username: root
       password: root
       driver-class-name: com.mysql.jdbc.Driver
